Cherry-pick 50ee84ca6e27. rdar://116698810

Fix imported/w3c/web-platform-tests/css/css-tables/fixed-layout-calc-width-001.html
    https://bugs.webkit.org/show_bug.cgi?id=262922
    <rdar://problem/116698810>

    Reviewed by Antti Koivisto.

    Calc width on col is treated as auto, even in fixed tables.

    * LayoutTests/TestExpectations:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-tables/fixed-layout-calc-width-001-expected.txt:
    * Source/WebCore/rendering/FixedTableLayout.cpp:
    (WebCore::FixedTableLayout::calcWidthArray):

    Canonical link: https://commits.webkit.org/269151@main

Identifier: 267815.317@safari-7617-branch