Source/WebCore/rendering/FixedTableLayout.cpp
@@ -101,6 +101,8 @@ float FixedTableLayout::calcWidthArray()
         float effectiveColWidth = 0;
         if (colStyleLogicalWidth.isFixed() && colStyleLogicalWidth.value() > 0)
             effectiveColWidth = colStyleLogicalWidth.value();
+        else if (colStyleLogicalWidth.isCalculated())
+            colStyleLogicalWidth = Length { };
 
         unsigned span = col->span();
         while (span) {
@@ -118,7 +120,7 @@ float FixedTableLayout::calcWidthArray()
                 }
                 spanInCurrentEffectiveColumn = m_table->spanOfEffCol(currentEffectiveColumn);
             }
-            if ((colStyleLogicalWidth.isFixed() || colStyleLogicalWidth.isPercentOrCalculated()) && colStyleLogicalWidth.isPositive()) {
+            if ((colStyleLogicalWidth.isFixed() || colStyleLogicalWidth.isPercent()) && colStyleLogicalWidth.isPositive()) {
                 m_width[currentEffectiveColumn] = colStyleLogicalWidth;
                 m_width[currentEffectiveColumn] *= spanInCurrentEffectiveColumn;
                 usedWidth += effectiveColWidth * spanInCurrentEffectiveColumn;
@@ -145,7 +147,8 @@ float FixedTableLayout::calcWidthArray()
         if (logicalWidth.isFixed() && logicalWidth.isPositive()) {
             fixedBorderBoxLogicalWidth = cell->adjustBorderBoxLogicalWidthForBoxSizing(logicalWidth);
             logicalWidth.setValue(LengthType::Fixed, fixedBorderBoxLogicalWidth);
-        }
+        } else if (logicalWidth.isCalculated())
+            logicalWidth = Length { };
 
         unsigned usedSpan = 0;
         while (usedSpan < span && currentColumn < nEffCols) {
